Update readme for Vercel build, edit repo links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Cole Isaac, Technical Writer
-repo_url: https://github.com/conceptualshark/conceptualshark.github.io
+repo_url: https://github.com/conceptualshark/portfolio
 repo_name: View this Repository
 
 # Themes 
