--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ theme:
     - content.code.copy
     - navigation.top
     - navigation.indexes
+    - navigation.expand
     
 plugins:
   - search
