feat: css override update and cleanup

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Cole Isaac, Technical Writer
+site_name: Docs as Craft
 repo_url: https://github.com/conceptualshark/portfolio
 repo_name: View this repository
 
