finalize css, add frontmatter

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,10 +7,15 @@ theme:
   name: material
   custom_dir: docs/overrides
   icon:
-    logo: simple/readme
+    logo: material/code-braces
   favicon: /assets/images/logo.png
 
   palette: 
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
@@ -18,7 +23,8 @@ theme:
       accent: cyan
       toggle:
         icon: material/brightness-4
-        name: Light Mode
+        name: Switch to dark mode
+
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -26,7 +32,8 @@ theme:
       accent: cyan
       toggle:
         icon: material/brightness-7 
-        name: Dark Mode
+        name: Switch to system preference
+        
   features:
     - content.code.copy
     - navigation.top
@@ -86,7 +93,7 @@ nav:
         - SSL certificates: portfolio/guide-ssl-certificates.md
     - References:
         - Privacy requests: portfolio/api-privacy-requests.md
-        - Referrals: portfolio/api-referrals.md
+        - Referral API: portfolio/api-referrals.md
         - Connectors UI: portfolio/guide-connectors.md
     - Concepts:
         - Privacy regulations: portfolio/article-privacy-regulations.md
